z-index fix

--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -3,10 +3,11 @@ div.navbar {
     justify-content: space-between;
     align-items: center;
     background: rgb(34,33,33);
-    background: linear-gradient(180deg, rgba(34,33,33,1) 0%, rgba(64,60,60,1) 100%);
+    background: linear-gradient(180deg, rgba(34,33,33,1) 0%, rgba(50,50,50,1) 100%);
     max-width: 100vw;
     height: 70px;
     position: sticky;
+    z-index: 100;
     top: 0;
     box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.452);
 }
